--- a/style.css
+++ b/style.css
@@ -1,32 +1,48 @@
 .file_button {
-    background-color: #2ECC40;
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 64px;
-    margin: 80px;
-    cursor: pointer;
-    border-radius: 50px;
+  background-color: #2ECC40;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 64px;
+  margin: 80px;
+  cursor: pointer;
+  border-radius: 90px;
+  outline: none;
+  box-shadow: 0 20px #999;
 }
+
+.file_button:hover {
+  background-color: #3e8e41
+}
+
+.file_button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 10px #666;
+  transform: translateY(10px);
+}
+
 .heading {
-    color: #001f3f;
-    font-size: 100px;
-    font-weight: 500;
-    text-align: center;
+  color: #001f3f;
+  font-size: 100px;
+  font-weight: 500;
+  text-align: center;
 }
-.heading_div  {
-  vertical-align:middle;
+
+.heading_div {
+  vertical-align: middle;
   text-align: center;
   width: 100%;
   height: 160px;
   background-color: white;
 }
+
 .heading_text_div {
   padding-top: 12px;
   padding-bottom: 15px;
 }
+
 .button_div {
   display: flex;
   justify-content: center;
@@ -34,6 +50,7 @@
   height: 418px;
   background-color: #001f3f;
 }
+
 .body_div {
   vertical-align: middle;
   width: 800px;
@@ -44,6 +61,6 @@
 }
 
 body {
- font-family: 'Quicksand', sans-serif;
- font-weight: 300;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 300;
 }
