--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
   text-decoration: none;
   display: inline-block;
   font-size: 64px;
-  margin: 80px;
+  margin-top: 40px;
+  margin-bottom: 60px;
+  margin-left: 80px;
+  margin-right: 80px;
   cursor: pointer;
   border-radius: 90px;
   outline: none;
@@ -38,6 +41,25 @@
   background-color: white;
 }
 
+.selection_div {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #001f3f;
+  height: 80px;
+}
+
+.choice {
+  background-color: #7FDBFF;
+  border: 1px solid #001f3f;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
+.choice:hover {
+  background-color: #0074D9;
+}
+
 .heading_text_div {
   padding-top: 12px;
   padding-bottom: 15px;
@@ -47,7 +69,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 418px;
+  height: 338px;
   background-color: #001f3f;
 }
 
