--- a/style.css
+++ b/style.css
@@ -2,18 +2,48 @@
   background-color: #2ECC40;
   border: none;
   color: white;
+  grid-area: button1;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 64px;
+  font-size: 48px;
   margin-top: 40px;
   margin-bottom: 60px;
-  margin-left: 80px;
-  margin-right: 80px;
+  margin-left: 30px;
+  margin-right: 30px;
   cursor: pointer;
   border-radius: 90px;
   outline: none;
   box-shadow: 0 20px #999;
+}
+
+.dec_file_button {
+  grid-area: button2;
+  background-color: #FF4136;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 48px;
+  margin-top: 40px;
+  margin-bottom: 60px;
+  margin-left: 30px;
+  margin-right: 30px;
+  cursor: pointer;
+  border-radius: 90px;
+  outline: none;
+  box-shadow: 0 20px #999;
+}
+
+.dec_file_button:hover {
+  background-color: #bf0a00;
+}
+
+.dec_file_button:active {
+  background-color: #bf0a00;
+  box-shadow: 0 10px #666;
+  transform: translateY(10px);
 }
 
 .file_button:hover {
@@ -53,6 +83,7 @@
   border: 1px solid #001f3f;
   padding: 20px;
   font-size: 30px;
+  outline: none;
   text-align: center;
 }
 
@@ -66,11 +97,14 @@
 }
 
 .button_div {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: auto auto;
   width: 100%;
   height: 338px;
   background-color: #001f3f;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "button1 button2"
 }
 
 .body_div {
